@@ -1471,14 +1471,9 @@ void ImageView::timeout()
           CMedia* img = fg->image();
           int64_t frame = img->frame();
 
-          if ( playback() == kForwards )
-          {
-              if ( img->audio_frame() > frame+5 )
-                  frame = img->audio_frame();
-          }
-          // else
+          // if ( playback() == kForwards )
           // {
-          //     if ( img->audio_frame() < frame )
+          //     if ( img->has_audio_data() && img->audio_frame() > frame+5 )
           //         frame = img->audio_frame();
           // }
 
