@@ -6,6 +6,7 @@ v3.0.5   - Made PSD, XCF and TIFF reader read the position and bounding
 	   extremely efficient.
 	 - Bug fixed audio display leaving the window and crashing
 	   when playing float audio.
+	 - Bug fixed audio timeline tick mark when not playing audio.
 
 v3.0.4   - Made PSD and TIFF reader read alpha channels correctly and
 	   support R,G,B,A in layers.
